objects/Service_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Audits</relationshipLabel>
        <relationshipName>Service_Audits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Last_Timestamp__c</fullName>
        <inlineHelpText>ex: 6/5/2015 11:18:00</inlineHelpText>
        <label>Call Last Timestamp</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Account__r.Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Catagory_Group__c</fullName>
        <label>Issue Catagory Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Catagory__c</fullName>
        <label>Issue Catagory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Change_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Change Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Audits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Change_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Change Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_Call__c</fullName>
        <label>Link to Call</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>QA_d_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA'd By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Audits2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summary_of_Call__c</fullName>
        <label>Summary of Call</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fix_Needed__c</fullName>
        <label>Fix Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Resolved__c</fullName>
        <label>Issue Resolved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pending Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Results_of_QA__c</fullName>
        <label>Results of QA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Quality Concern</fullName>
                </value>
                <value>
                    <fullName>NA - Poor Audio Quality</fullName>
                </value>
                <value>
                    <fullName>NA - Call Not Recorded</fullName>
                </value>
                <value>
                    <fullName>No Errors</fullName>
                </value>
                <value>
                    <fullName>Request Denied - Product Limitation</fullName>
                </value>
                <value>
                    <fullName>Request Denied - Knowledge Limitation</fullName>
                </value>
                <value>
                    <fullName>Work Completed Incorrectly (CS)</fullName>
                </value>
                <value>
                    <fullName>Work Completed Incorrectly (OPT)</fullName>
                </value>
                <value>
                    <fullName>Work Not Completed (CS)</fullName>
                </value>
                <value>
                    <fullName>Work Not Completed (OPT)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Audit</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Service Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Inbound_Call_Audit</fullName>
        <active>true</active>
        <label>Inbound Call Audit</label>
    </recordTypes>
</CustomObject>